sql/log_event_server.cc
@@ -4762,12 +4762,11 @@ int Rows_log_event::do_apply_event(rpl_group_info *rgi)
   thd->set_query_timer();
 
   /*
-    If there is no locks taken, this is the first binrow event seen
-    after the table map events.  We should then lock all the tables
-    used in the transaction and proceed with execution of the actual
-    event.
+    If there are no tables open, this must be the first row event seen
+    after the table map events. We should then open and lock all tables
+    used in the transaction and proceed with execution of the actual event.
   */
-  if (!thd->lock)
+  if (!thd->open_tables)
   {
     /*
       Lock_tables() reads the contents of thd->lex, so they must be
